# flatpak-kde-presentation

./: CMakeLists.txt  assets.qrc  main.cpp  org.kde.flatpak-kde.appdata.xml  org.kde.flatpak-kde.desktop  resources.qrc
flatpak-build/: build.sh  org.kde.flatpak-kde.json
qml/: AnimatedPresentation.qml  LoadingSlide.qml  SlideText.qml  TextSlide.qml  main.qml
